# VTKmVsVisItClipping

./: .gitignore  CMakeLists.txt  ClippingTrial.cxx  ClippingTrialOffScreen.cxx  SplitCellReader.cxx  clippingVisit.py  plotscript.R
ClippingGL/: CMakeLists.txt  ClippingTrial.cu  ClippingTrial.cxx
ClippingOffScreen/: CMakeLists.txt  ClippingTrialOffScreen.cxx  ClippingTrialOffScreenCUDA.cu  ClippingTrialOffScreenTBB.cxx  build  clippingVisit.py  runvisit
CustomDataSet/: CMakeCache.txt  CMakeLists.txt  DataSetCreator.cxx  Makefile  a.out  cmake_install.cmake  datasetbuild
ExtractCases/: CMakeLists.txt  build  extractcases.cu  extractcases.cxx  runscript.sh  vanilla.cu  vanilla.cxx
SplitCellReader/: clippingVisit.py  runvisit
